# nexus_copilot

./: .gitignore  package.json  readme.md  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yml
frontend/: index.html
frontend/src/: App.vue  CopilotApp.vue  i18n.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AgentExecutionView.vue  ArtifactDetailNode.vue  ArtifactPreviewPanel.vue  AttachmentPill.vue  ChatConfigBar.vue  ChatInput.vue  ChatInputArea.vue  ChatSuggestions.vue  ChatThread.vue  ClipboardItem.vue  CodeBlock.vue  DebateArtifactDetail.vue  DebateExecutionView.vue  EditableOutlineNode.vue  ExploreArtifactDetail.vue  ExploreExecutionView.vue  FilePreviewModal.vue  JsonViewer.vue  KnowledgeSourceItem.vue  KnowledgeSourceItemSkeleton.vue  MediaBlock.vue  Message.vue  MessageSkeleton.vue  PlanExecutionView.vue  (+11 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  error.rs  lib.rs  main.rs  prelude.rs  state.rs
src-tauri/src/commands/: agent.rs  app.rs  app_info.rs  assets.rs  backup.rs  chat.rs  clipboard.rs  dashboard.rs  execution.rs  integrations.rs  intent.rs  knowledge_base.rs  mod.rs  settings.rs  system.rs  tools.rs  workflows.rs
src-tauri/src/database/: migrations.rs  mod.rs  models.rs  schema.rs
src-tauri/src/database/queries/: agent_queries.rs  chat_queries.rs  clipboard_queries.rs  creation_queries.rs  mod.rs  note_queries.rs  online_kb_queries.rs  settings_queries.rs  tool_queries.rs
src-tauri/src/knowledge_base/: indexer.rs  mod.rs  models.rs  parser.rs  searcher.rs
src-tauri/src/services/: agent.rs  execution.rs  intent.rs  mod.rs  proxy_types.rs  shortcuts.rs  tools.rs  vector_client.rs  window_manager.rs  workflows.rs
src-tauri/src/services/chat/: llm_utils.rs  message_handler.rs  mod.rs  rag.rs
src-tauri/src/system/: clipboard.rs  context.rs  fs.rs  mod.rs
(+74 files in other folders)
