# src-tauri/Cargo.toml
[package]
name = "nexus_copilot"
version = "0.3.15"
description = "Nexus Copilot, A AI Knowledge App."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-open", "macos-private-api", "global-shortcut-all", "global-shortcut", "http-all", "fs-all", "path-all", "dialog-all", "window-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
arboard = "3.4"
walkdir = "2.5"
pdf-extract = "0.7"
docx-rs = "0.4.1"
once_cell = "1.19"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["system-tray"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest-eventsource = "0.6.0"
regex = "1.10"
bytes = "1.6"
url = { version = "2.5.0", features = ["serde"] }
image = { version = "0.25.6", features = ["png"] }
base64 = "0.22.1"
futures = "0.3.31"
enigo = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
